w6/src/azure/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vmNamePrefix": {
            "type": "string",
            "defaultValue": "mr",
            "metadata": {
              "description": "Prefix to use for VM names"
            }   
        },
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Admin username"
            }   
        },  
        "sshKey": {
            "type": "string",
            "metadata": {
                "description": "SSH Key for admin username"
            }   
        },  
 
        "publicIPAddressNamePrefix": {
            "defaultValue": "mr-ip",
            "type": "String",
            "metadata": {
                "description": "Public IP Name Prefix"
            }
        },
        "nicNamePrefix": {
            "type": "string",
            "defaultValue": "nic",
            "metadata": {
                "description": "Network Interface name prefix"
            }
        },
        "networkSecurityGroupName": {
            "defaultValue": "mr-nsg",
            "type": "String"
        },
        "vnetName": {
            "type": "string",
            "defaultValue": "mrvnet",
            "metadata": {
                "description": "VNET name"
            }
        },
        "vmSize": {
            "type": "string",
            "defaultValue": "Standard_D2_v4",
            "metadata": {
                "description": "Size of the VM"
            }   
        },  
        "numberOfInstances": {
            "type": "int",
            "minValue":1,
            "defaultValue": 2,
            "maxValue": 10,
            "metadata": {
                "description": "Number of VM instances"
            }  
        },
        "imageOffer": {
          "type": "string",
          "defaultValue": "UbuntuServer",
          "metadata": {
            "description": "Image Offer"
          }
        },
        "imageSKU": {
            "type": "string",
            "defaultValue": "18.04-LTS",
            "allowedValues": [
                "18.04-LTS"
            ],  
            "metadata": {
                "description": "Image SKU"
            }   
        }, 
        "imagePublisher": {
            "type": "string",
            "defaultValue": "Canonical",
            "metadata": {
                "description": "Image Publisher"
            }   
        }, 
        "dnsNamePrefix": {
            "type": "string",
            "metadata": {
                "description": "DNS Prefix for VM IP"
            }
        },
        "storageAccountName": {
            "type": "string",
            "metadata": {
                "description": "Name of storage account"
            }
        }
    },
    "variables": {
       "subnetName": "Subnet-1",
       "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',parameters('vnetName'))]",
       "subnetRef": "[concat(variables('vnetID'),'/subnets/',variables('subnetName'))]"
     },
     "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[parameters('storageAccountName')]",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "properties": {
                "accountType": "Standard_LRS"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[parameters('networkSecurityGroupName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2020-05-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(parameters('publicIPAddressNamePrefix'), copyindex())]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[concat(parameters('dnsNamePrefix'),copyindex())]"
                },
                "ipTags": []
            },
            "copy": {
                "name": "iploop",
                "count": "[parameters('numberOfInstances')]"
            }
        },
        { 
            "apiVersion": "2020-05-01",
            "type": "Microsoft.Network/virtualNetworks", 
            "name": "[parameters('vnetName')]", 
            "location": "[resourceGroup().location]", 
            "properties": { 
                "addressSpace": { 
                    "addressPrefixes": [ 
                       "10.0.0.0/16" 
                   ] 
                }, 
                "subnets": [ 
                    { 
                       "name": "[variables('subnetName')]", 
                       "properties": { 
                            "addressPrefix": "10.0.0.0/24" 
                        } 
                    } 
                ] 
            } 
        },
        {
            "apiVersion": "2020-05-01",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(parameters('nicNamePrefix'), copyindex())]",
            "location": "[resourceGroup().location]",
            "copy": {
                "name": "nicLoop",
                "count": "[parameters('numberOfInstances')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', parameters('vnetName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName'))]",
                "[concat('Microsoft.Network/publicIPAddresses/', concat(parameters('publicIPAddressNamePrefix'),copyindex() ) )]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses/',concat(parameters('publicIPAddressNamePrefix'),copyindex() ) ) ]"
                            },
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAddressVersion": "IPv4"
                      }
                  }
                ],
                "enableAcceleratedNetworking": true,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkSecurityGroupName'), '/SSH')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "name": "[concat(parameters('vmNamePrefix'), copyindex())]",
            "copy": {
                "name": "virtualMachineLoop",
                "count": "[parameters('numberOfInstances')]"
            },
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('nicNamePrefix'), copyindex())]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('storageAccountName'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('imagePublisher')]",
                        "offer": "[parameters('imageOffer')]",
                        "sku": "[parameters('imageSKU')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[concat(parameters('vmNamePrefix'), copyIndex())]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[concat('/home/',parameters('adminUserName'),'/.ssh/authorized_keys')]",
                                    "keyData": "[parameters('sshKey')]"
                                }
                            ]
                        },
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces/',concat(parameters('nicNamePrefix'),copyindex()))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('http://',parameters('storageAccountName'),'.blob.core.windows.net')]"
                    }
                }
            }
        }
    ]
}
